# CQDAGPCFG-Parallel

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  protocol_validation.md  state_migration_snapshot_format.md
experiments/: cqpcfg_experiment.py
experiments/docker/: Dockerfile  README.md  compose.yml  run_worker.sh  stop_workers.sh  workers.compose.yml
experiments/docker/nginx/: cqpcfg-stream.conf  install_cqpcfg_stream.sh
experiments/docker/prometheus/: prometheus.yml
experiments/src/: common.py  fault_injection.py  generator_worker.py  hash_consumer.py  node_agent.py  prepare.py  protocol_validation.py  run_local.py  tracker.py  verify_hits.py  worker_churn.py
experiments/src/scenarios/: __init__.py  fault_injection.py  protocol_validation.py  run_local.py  worker_churn.py
experiments/src/services/: __init__.py  metrics_exporter.py  node_agent.py  tracker.py
experiments/src/shared/: benchmark_backends.py  (+4 more)
src/cqdagpcfg_parallel/: __init__.py  framework_logging.py
tests/semantic/: test_annotated_distributed_api.py  test_cqdagpcfg_candidate_pipeline.py  test_paged_model_source.py  test_protocol_cqdagpcfg_prefix.py  test_zmq_distributed_protocol.py
tests/unit/: test_annotations.py  test_batch_transport.py  test_candidate_pipeline.py  test_candidate_space.py  test_cqdag_job_spec.py  test_distributed_messages.py  test_imports.py  test_job_context.py  test_memory_policy.py  test_metrics_exporter.py  test_migration_protocol.py  test_model_transport.py  test_protocol_state_machine.py  test_role_allocator.py  test_state_migration_snapshot.py
(+73 files in other folders)
