[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cqdagpcfg-parallel"
version = "0.1.0"
description = "Parallel protocol experiments for CQDAGPCFG"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "CQDAGPCFG Authors" }
]
dependencies = [
  "CQDAGPCFG @ git+https://github.com/CQDAGPCFG/CQDAGPCFG.git"
]

[project.optional-dependencies]
dev = [
  "pytest>=8"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
