[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cqdagpcfg-parallel"
version = "0.1.0"
description = "Parallel protocol experiments for CQDAGPCFG"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "CQDAGPCFG Authors" }
]
dependencies = [
  "CQDAGPCFG @ git+https://github.com/CQDAGPCFG/CQDAGPCFG.git"
]

[project.optional-dependencies]
zmq = [
  "pyzmq>=25"
]
dev = [
  "pytest>=8",
  "pyzmq>=25"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cqdagpcfg_parallel = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
